# speed-camera-alert-app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.js  package.json  tsconfig.json
public/: map.html
scripts/: lint.ts  update_deps.ts  utils.ts
src/: app.js  convert_csv_to_json.py  convert_utm_to_latlon.js  fiscalizacao_eletronica_2024.csv  fiscalizacao_eletronica_2024.json  fs.js  inspect_csv.py  main.py  package.json  path.js  person.js  test_path.py  update_coordinates.js
src/client/: utils.ts
src/config/: firebaseConfig.ts
src/database/: connect.js
src/lib/: server.js
src/lib/public/: map.html
src/mkdir __tests__/: app.test.js
src/models/: user.model.js
src/modules/: express.js  firebase.js  http.js  mongoose.js
src/server/: index.ts
src/tests/: app.test.ts  tests.d.ts
src/views/: index.ejs
